k8s-manifest/namespace.yml
# Configure namespace file 
apiVersion: apps/v1
kind: Namespace
metadata:
  name: zero-touch-gitops
